package org.ENSEACS.core.UI.state;
/*
 * Author: Kels C.
 * ENSEA 2025 */
public interface State {
    void clickPlay();
    void onTimerRunOut();
}
